syntax = "proto3";
package order;

option java_package = "com.summer.dt.proto";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

service Order {
    rpc saveOrder (OrderSaveRequest) returns (OrderSaveReply) {
        option (google.api.http) = {
            post: "/api/order"
            body: "*"
        };
    }
}

message OrderSaveRequest {
    double price = 1;
    string detail = 2;
}

message OrderSaveReply {
    uint64 id = 1;
    uint64 createTime = 2;
    double price = 3;
    string detail = 4;


}
